added /categories/add and build openapi
