# openapi.yaml
@@ -1,72 +1,232 @@
-swagger: '2.0'
+openapi: 3.0.1
 info:
-  title: 'Rust Axum SQLX 1'
+  title: Rust Axum+SQLx Sample
   description: ''
   version: 0.0.1
-host: "localhost:8085" 
-schemes: 
+servers:
+  - url: 'http://localhost:8085'
+schemes:
   - http
 produces:
   - application/json
+tags:
+  - name: user
+  - name: category
+  - name: post
 paths:
   /users:
     get:
+      tags:
+        - user
       summary: get 10 users
       operationId: get_users
       parameters:
-        - name: "name"
-          in: "query"
-          description: "user name"
+        - name: name
+          in: query
+          description: user name
           required: false
-          type: "string"
-      responses: 
+          type: string
+      responses:
         '200':
           description: return users
-          schema:
-            type: "array"
-            items: 
-              $ref: "#/definitions/User"
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/user/User'
   /users/add:
     post:
+      tags:
+        - user
       summary: add user
       operationId: add_user
-      parameters:
-        - name: "body"
-          in: "body"
-          description: "user info"
-          required: true
-          type: "object"
-          schema:
-              $ref: "#/definitions/CreateUser"
-      responses: 
+      requestBody:
+        description: user info
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/user/CreateUser'
+      responses:
         '200':
           description: return userId
-          schema:
-            type: "integer"
-            format: "int32"
-definitions:
-  User: 
-    type: "object"
-    properties:
-      id:
-        type: "integer"
-        format: "int32"
-      name:
-        type: "string"
-      msg:
-        type: "string"
-      age:
-        type: "integer"
-        format: "int16"
-  CreateUser:
-    type: "object"
-    properties:
-      name:
-        type: "string"
-      msg:
-        type: "string"
-      age:
-        type: "integer"
-        format: "int16"
-      
-      
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/user/UserId'
+  /categories:
+    get:
+      tags:
+        - category
+      summary: get 10 categories
+      operationId: get_categores
+      parameters:
+        - name: name
+          in: query
+          description: category name
+          required: false
+          type: string
+      responses:
+        '200':
+          description: return categories
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/category/Category'
+  /categories/add:
+    post:
+      tags:
+        - category
+      summary: add category
+      operationId: add_category
+      requestBody:
+        description: category info
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/category/CreateCategory'
+      responses:
+        '200':
+          description: return categoryId
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/category/CategoryId'
+  /posts:
+    get:
+      tags:
+        - post
+      summary: get 10 posts
+      operationId: get_posts
+      parameters:
+        - name: title
+          in: query
+          description: post title
+          required: false
+          type: string
+      responses:
+        '200':
+          description: return posts
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/post/Post'
+  /posts/add:
+    post:
+      tags:
+        - post
+      summary: add post
+      operationId: add_post
+      requestBody:
+        description: post info
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/post/CreatePost'
+      responses:
+        '200':
+          description: return postId
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/post/PostId'
+components:
+  schemas:
+    user:
+      User:
+        type: object
+        properties:
+          id:
+            type: integer
+            format: int32
+          name:
+            type: string
+          msg:
+            type: string
+          age:
+            type: integer
+            format: int16
+      CreateUser:
+        required:
+          - name
+        type: object
+        properties:
+          name:
+            type: string
+          msg:
+            type: string
+          age:
+            type: integer
+            format: int16
+      UserId:
+        type: object
+        properties:
+          id:
+            type: integer
+            format: int32
+    category:
+      Category:
+        type: object
+        properties:
+          id:
+            type: integer
+            format: int32
+          name:
+            type: string
+      CreateCategory:
+        required:
+          - name
+        type: object
+        properties:
+          name:
+            type: string
+      CategoryId:
+        type: object
+        properties:
+          id:
+            type: integer
+            format: int32
+    post:
+      Post:
+        type: object
+        properties:
+          id:
+            type: integer
+            format: int32
+          user_id:
+            type: integer
+            format: int32
+          category_id:
+            type: integer
+            format: int32
+          title:
+            type: string
+          content:
+            type: string
+      CreatePost:
+        required:
+          - user_id
+          - category_id
+          - title
+        type: object
+        properties:
+          user_id:
+            type: integer
+            format: int32
+          category_id:
+            type: integer
+            format: int32
+          title:
+            type: string
+          content:
+            type: string
+      PostId:
+        type: object
+        properties:
+          id:
+            type: integer
+            format: int32
